--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <h1>Dave Mackenzie</h1>
             <h2>Director, Founder @ Unsigned Studio</h2>
             <h2>Technical Director @ Squint Opera Australia</h2>
-            <p>Creative Technologist, Pixel Engineer, 3D Artist. One time Sydney sider now based in Melbourne.</p>
+            <p>Creative Technologist, Pixel Engineer, 3D Artist. One time Sydney-sider now based in Melbourne.</p>
             <p>This place is where I put strange things that I occasionally make.</p>
             <p>Connect with me.</p>
             <a href="https://www.linkedin.com/in/davemackenzie">LinkedIn</a>
