--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             <a href="https://www.linkedin.com/in/davemackenzie">LinkedIn</a>
             <a href="https://twitter.com/davemackenzie">Twitter</a>
             <a href="http://instagram.com/dmack.io/">Instagram</a>
+            <a href="mailto:info@unsignedstudio.io?Subject=Hello"  target="_blank">Email</a>
         </div>
         <div class="bg-container"></div>
     </body>
