--- a/index.html
+++ b/index.html
@@ -19,5 +19,8 @@
             <a href="mailto:info@unsignedstudio.io?Subject=Hello"  target="_blank">Email</a>
         </div>
         <div class="bg-container"></div>
+        <script type="text/javascript" src="p5.min.js"></script>
+        <script type="text/javascript" src="p5.dom.min.js"></script>
+        <script type="text/javascript" src="numbers.js"></script>
     </body>
 </html>
