--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="http://instagram.com/dmack.io/">Instagram</a>
             <a href="mailto:info@unsignedstudio.io?Subject=Hello"  target="_blank">Email</a>
         </div>
-        <div class="bg-container"></div>
+        <div id="canvas-container"></div>
         <script type="text/javascript" src="p5.min.js"></script>
         <script type="text/javascript" src="p5.dom.min.js"></script>
         <script type="text/javascript" src="numbers.js"></script>
