--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <div id="canvas-container"></div>
         <script type="text/javascript" src="p5.min.js"></script>
         <script type="text/javascript" src="p5.dom.min.js"></script>
-        <script type="text/javascript" src="numbers.js"></script>
+        <script type="text/javascript" src="p5.sound.min.js"></script>
+        <script type="text/javascript" src="rectangle.js"></script>
     </body>
 </html>
